@@ -202,6 +202,7 @@ i18n / Languages:
   a such distinction
 * (bug 4548) Update for Portuguese language (pt): time format
 * (bug 4530) Use consistent name for Kurdish
+* Tweak default "upload disabled" text
 
 Parser:
 * (bug 2522) {{CURRENTDAY2}} now shows the current day number with two digits
@@ -458,6 +459,7 @@ fully support the editing toolbar, but was found to be too confusing.
   size. This is necessary to limit server memory usage.
 * Cleanup and error checking on Special:Listredirects
 * Clear up some instances of old OutputPage::sysopRequired() function usage
+* Improve "upload disabled" notice
 
 === Caveats ===
 
